Remove unneeded icons
Signed-off-by: mueller-ma <mueller-ma@users.noreply.github.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#D84315</color>
     <color name="colorAccent">#DD2C00</color>
+    <color name="ic_launcher_background">@color/colorPrimary</color>
 </resources>
